# Distill

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  generate_key.py  implementation_plan.md.resolved  pyproject.toml  requirements.txt  seed_api_key.py  temp_files.txt  test.html  test_local.py  test_output.txt  test_result.txt  test_v1_1_0_result.txt
app/: config.py  dependencies.py  main.py
app/db/: models.py  (+1 more)
backend/: .env.example  Dockerfile  create_tables.py  pyproject.toml  pytest.ini  railway.json  requirements.txt  run_tests.py  sanity_check.py  spec.md  test_local.py  test_stealth.py
backend/app/: config.py  db_redis.py  dependencies.py  main.py
backend/app/db/: job_helpers.py  models.py  session.py
backend/app/middleware/: logging.py
backend/app/routers/: admin.py  agent.py  auth.py  jobs.py  map.py  metrics.py  scrape.py  search.py
backend/app/services/: agent_service.py  browser.py  extractor.py  fetcher.py  job_runner.py  llm.py  map_service.py  playwright_fetcher.py  robots.py  search_provider.py  url_utils.py
backend/app/tasks/: cleanup.py
backend/app/utils/: logging.py  text.py
backend/app/worker/: arq_worker.py  playwright_pool.py  sql_worker.py  tasks.py
backend/tests/: test_admin.py  test_agent.py  test_main.py  test_map.py
frontend/: README.md  middleware.ts  package-lock.json  package.json  temp2.txt  vercel.json
tests/: conftest.py  integration_test.py  test_admin.py  test_agent.py  test_auth.py  test_main.py  test_map.py  test_scrape.py  test_search.py  test_v1_1_0.py  test_v1_3_features.py
(+64 files in other folders)
