[project]
name = "webextract"
version = "1.2.0"
description = "WebExtract Engine backend MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "lxml>=5.1",
  "trafilatura>=1.8",
  "readability-lxml>=0.8.1",
  "markdownify>=0.12",
  "playwright>=1.41",
  "sentry-sdk>=1.40",
  "redis[asyncio]>=5.0",
  "arq>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "ruff>=0.2",
  "fakeredis[lua]>=2.20",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
